--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/jszip": "^3.1.6",
     "@types/lodash": "^4.14.149",
     "@types/minimist": "^1.2.0",
+    "@types/mkdirp": "^0.5.2",
     "@types/mocha": "^5.2.7",
     "@types/mock-require": "^2.0.0",
     "@types/nock": "^10.0.3",
@@ -74,8 +75,10 @@
     "@types/unzipper": "^0.9.2",
     "@types/update-notifier": "^2.5.0",
     "@types/which": "^1.3.2",
+    "@types/wordwrap": "^1.0.0",
     "@types/xml2js": "^0.4.5",
     "@types/xmldom": "^0.1.29",
+    "@types/yazl": "^2.4.2",
     "autorest": "^2.0.4407",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
@@ -95,9 +98,6 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
-    "@types/mkdirp": "^0.5.2",
-    "@types/wordwrap": "^1.0.0",
-    "@types/yazl": "^2.4.2",
     "appcenter-file-upload-client": "0.0.9",
     "azure-storage": "^2.10.3",
     "bplist": "0.0.4",
@@ -115,7 +115,7 @@
     "jsonwebtoken": "^8.5.1",
     "jszip": "^3.2.2",
     "lodash": "^4.17.15",
-    "minimist": "^1.2.0",
+    "minimist": "1.2.5",
     "mkdirp": "^0.5.1",
     "ms-rest": "^2.5.3",
     "omelette": "^0.4.12",
