--- a/package.json
+++ b/package.json
@@ -43,105 +43,105 @@
     "dist"
   ],
   "devDependencies": {
-    "@types/async": "^3.0.3",
-    "@types/chai": "^4.2.6",
-    "@types/chai-as-promised": "^7.1.2",
+    "@types/async": "3.0.3",
+    "@types/chai": "4.2.6",
+    "@types/chai-as-promised": "7.1.2",
     "@types/debug": "4.1.4",
-    "@types/duplexify": "^3.6.0",
-    "@types/from2": "^2.3.0",
-    "@types/glob": "^7.1.1",
+    "@types/duplexify": "3.6.0",
+    "@types/from2": "2.3.0",
+    "@types/glob": "7.1.1",
     "@types/inquirer": "6.0.3",
-    "@types/jsonwebtoken": "^8.3.5",
-    "@types/jszip": "^3.1.6",
-    "@types/lodash": "^4.14.149",
-    "@types/minimist": "^1.2.0",
-    "@types/mkdirp": "^0.5.2",
-    "@types/mocha": "^5.2.7",
-    "@types/mock-require": "^2.0.0",
-    "@types/nock": "^10.0.3",
-    "@types/node": "^12.12.14",
-    "@types/node-fetch": "^2.5.4",
-    "@types/opener": "^1.4.0",
-    "@types/promptly": "^1.1.28",
-    "@types/pumpify": "^1.4.1",
-    "@types/qs": "^6.9.0",
-    "@types/request": "^2.48.3",
-    "@types/rimraf": "^2.0.3",
-    "@types/semver": "^6.2.0",
-    "@types/sinon": "^7.5.1",
-    "@types/split2": "^2.1.6",
-    "@types/temp": "^0.8.34",
-    "@types/through2": "^2.0.34",
-    "@types/unzipper": "^0.9.2",
-    "@types/update-notifier": "^2.5.0",
-    "@types/which": "^1.3.2",
-    "@types/wordwrap": "^1.0.0",
-    "@types/xml2js": "^0.4.5",
-    "@types/xmldom": "^0.1.29",
-    "@types/yazl": "^2.4.2",
-    "autorest": "^2.0.4407",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "gulp": "^4.0.2",
-    "gulp-clean": "^0.4.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-typescript": "^5.0.1",
-    "mocha": "^6.2.2",
-    "mocha-junit-reporter": "^1.23.1",
-    "mock-require": "^3.0.3",
-    "nock": "^10.0.6",
-    "sinon": "^7.5.0",
-    "ts-node": "^8.5.4",
-    "tslint": "^5.20.1",
-    "tslint-microsoft-contrib": "^6.2.0",
-    "tslint-no-unused-expression-chai": "^0.1.4",
-    "typescript": "^3.7.3"
+    "@types/jsonwebtoken": "8.3.5",
+    "@types/jszip": "3.1.6",
+    "@types/lodash": "4.14.149",
+    "@types/minimist": "1.2.0",
+    "@types/mkdirp": "0.5.2",
+    "@types/mocha": "5.2.7",
+    "@types/mock-require": "2.0.0",
+    "@types/nock": "10.0.3",
+    "@types/node": "12.12.14",
+    "@types/node-fetch": "2.5.4",
+    "@types/opener": "1.4.0",
+    "@types/promptly": "1.1.28",
+    "@types/pumpify": "1.4.1",
+    "@types/qs": "6.9.0",
+    "@types/request": "2.48.3",
+    "@types/rimraf": "2.0.3",
+    "@types/semver": "6.2.0",
+    "@types/sinon": "7.5.1",
+    "@types/split2": "2.1.6",
+    "@types/temp": "0.8.34",
+    "@types/through2": "2.0.34",
+    "@types/unzipper": "0.9.2",
+    "@types/update-notifier": "2.5.0",
+    "@types/which": "1.3.2",
+    "@types/wordwrap": "1.0.0",
+    "@types/xml2js": "0.4.5",
+    "@types/xmldom": "0.1.29",
+    "@types/yazl": "2.4.2",
+    "autorest": "2.0.4407",
+    "chai": "4.2.0",
+    "chai-as-promised": "7.1.1",
+    "gulp": "4.0.2",
+    "gulp-clean": "0.4.0",
+    "gulp-sourcemaps": "2.6.5",
+    "gulp-typescript": "5.0.1",
+    "mocha": "6.2.2",
+    "mocha-junit-reporter": "1.23.1",
+    "mock-require": "3.0.3",
+    "nock": "10.0.6",
+    "sinon": "7.5.0",
+    "ts-node": "8.5.4",
+    "tslint": "5.20.1",
+    "tslint-microsoft-contrib": "6.2.0",
+    "tslint-no-unused-expression-chai": "0.1.4",
+    "typescript": "3.7.3"
   },
   "dependencies": {
     "appcenter-file-upload-client": "0.0.9",
-    "azure-storage": "^2.10.3",
+    "azure-storage": "2.10.3",
     "bplist": "0.0.4",
-    "chalk": "^2.4.2",
-    "cli-spinner": "^0.2.10",
-    "cli-table3": "^0.5.1",
-    "date-fns": "^1.30.1",
-    "debug": "^4.1.1",
-    "fast-xml-parser": "^3.15.0",
-    "from2": "^2.3.0",
-    "glob": "^7.1.6",
-    "gradle-to-js": "^2.0.0",
-    "inquirer": "^6.5.2",
-    "iso8601-duration": "^1.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "jszip": "^3.2.2",
-    "lodash": "^4.17.15",
+    "chalk": "2.4.2",
+    "cli-spinner": "0.2.10",
+    "cli-table3": "0.5.1",
+    "date-fns": "1.30.1",
+    "debug": "4.1.1",
+    "fast-xml-parser": "3.15.0",
+    "from2": "2.3.0",
+    "glob": "7.1.6",
+    "gradle-to-js": "2.0.0",
+    "inquirer": "6.5.2",
+    "iso8601-duration": "1.2.0",
+    "jsonwebtoken": "8.5.1",
+    "jszip": "3.2.2",
+    "lodash": "4.17.15",
     "minimist": "1.2.5",
-    "mkdirp": "^0.5.1",
-    "ms-rest": "^2.5.3",
-    "omelette": "^0.4.12",
-    "opener": "^1.5.1",
-    "p-limit": "^2.2.1",
-    "plist": "^3.0.1",
-    "properties": "^1.2.1",
-    "pumpify": "^2.0.1",
-    "qs": "^6.9.1",
-    "request": "^2.88.0",
-    "rimraf": "^2.6.3",
-    "rxjs": "^6.5.3",
-    "semver": "^6.3.0",
-    "split2": "^3.1.1",
-    "strip-ansi": "^5.2.0",
-    "temp": "^0.9.1",
-    "through2": "^3.0.1",
-    "unzipper": "^0.10.5",
-    "update-notifier": "^3.0.1",
-    "uuid": "^3.3.3",
-    "webpack-cli": "^3.3.10",
-    "which": "^1.3.1",
-    "wordwrap": "^1.0.0",
-    "xcode": "^2.1.0",
-    "xml2js": "^0.4.22",
-    "xmldom": "^0.1.27",
-    "yazl": "^2.5.1"
+    "mkdirp": "0.5.1",
+    "ms-rest": "2.5.3",
+    "omelette": "0.4.12",
+    "opener": "1.5.1",
+    "p-limit": "2.2.1",
+    "plist": "3.0.1",
+    "properties": "1.2.1",
+    "pumpify": "2.0.1",
+    "qs": "6.9.1",
+    "request": "2.88.0",
+    "rimraf": "2.6.3",
+    "rxjs": "6.5.3",
+    "semver": "6.3.0",
+    "split2": "3.1.1",
+    "strip-ansi": "5.2.0",
+    "temp": "0.9.1",
+    "through2": "3.0.1",
+    "unzipper": "0.10.5",
+    "update-notifier": "3.0.1",
+    "uuid": "3.3.3",
+    "webpack-cli": "3.3.10",
+    "which": "1.3.1",
+    "wordwrap": "1.0.0",
+    "xcode": "2.1.0",
+    "xml2js": "0.4.22",
+    "xmldom": "0.1.27",
+    "yazl": "2.5.1"
   }
 }
