--- a/package.json
+++ b/package.json
@@ -43,37 +43,37 @@
     "dist"
   ],
   "devDependencies": {
-    "@types/async": "3.0.3",
-    "@types/chai": "4.2.6",
+    "@types/async": "3.0.8",
+    "@types/chai": "4.2.11",
     "@types/chai-as-promised": "7.1.2",
-    "@types/debug": "4.1.4",
+    "@types/debug": "4.1.5",
     "@types/duplexify": "3.6.0",
     "@types/from2": "2.3.0",
     "@types/glob": "7.1.1",
     "@types/inquirer": "6.0.3",
-    "@types/jsonwebtoken": "8.3.5",
-    "@types/jszip": "3.1.6",
+    "@types/jsonwebtoken": "8.3.8",
+    "@types/jszip": "3.1.7",
     "@types/lodash": "4.14.149",
     "@types/minimist": "1.2.0",
     "@types/mkdirp": "0.5.2",
     "@types/mocha": "7.0.2",
     "@types/mock-require": "2.0.0",
     "@types/nock": "10.0.3",
-    "@types/node": "12.12.14",
-    "@types/node-fetch": "2.5.4",
+    "@types/node": "10.*",
+    "@types/node-fetch": "2.5.5",
     "@types/opener": "1.4.0",
-    "@types/promptly": "1.1.28",
+    "@types/promptly": "3.0.0",
     "@types/pumpify": "1.4.1",
-    "@types/qs": "6.9.0",
-    "@types/request": "2.48.3",
+    "@types/qs": "6.9.1",
+    "@types/request": "2.48.4",
     "@types/rimraf": "2.0.3",
     "@types/semver": "7.1.0",
     "@types/sinon": "7.5.1",
     "@types/split2": "2.1.6",
     "@types/temp": "0.8.34",
     "@types/through2": "2.0.34",
-    "@types/unzipper": "0.9.2",
-    "@types/update-notifier": "2.5.0",
+    "@types/unzipper": "0.10.2",
+    "@types/update-notifier": "4.1.0",
     "@types/which": "1.3.2",
     "@types/wordwrap": "1.0.0",
     "@types/xml2js": "0.4.5",
