--- a/src/commands/test/lib/templates/appium/ios/pom.xml
+++ b/src/commands/test/lib/templates/appium/ios/pom.xml
@@ -28,7 +28,12 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>5.3.20</version>
+      <version>5.3.26</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>5.3.26</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
@@ -38,7 +43,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-expression</artifactId>
-      <version>5.3.20</version>
+      <version>5.3.26</version>
     </dependency>
   </dependencies>
 
