--- a/package.json
+++ b/package.json
@@ -105,10 +105,10 @@
   },
   "dependencies": {
     "@xmldom/xmldom": "0.8.6",
+    "@azure/storage-blob": "^12.14.0",
     "abort-controller": "3.0.0",
     "appcenter-file-upload-client": "0.1.0",
     "appcenter-file-upload-client-node": "^1.2.4",
-    "azure-storage": "2.10.7",
     "bplist": "0.0.4",
     "chalk": "4.1.2",
     "cli-spinner": "0.2.10",
@@ -151,7 +151,7 @@
     "which": "2.0.2",
     "wordwrap": "1.0.0",
     "xcode": "3.0.1",
-    "xml2js": "0.4.23",
+    "xml2js": "^0.5.0",
     "yazl": "2.5.1"
   }
 }
