--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "@types/yazl": "2.4.2",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
-    "autorest": "2.0.4413",
+    "autorest": "3.6.3",
     "chai": "4.3.4",
     "chai-as-promised": "7.1.1",
     "eslint": "7.32.0",
@@ -105,6 +105,9 @@
     "typescript": "4.3.5"
   },
   "dependencies": {
+    "@azure/core-client": "^1.7.2",
+    "@azure/core-rest-pipeline": "^1.10.3",
+    "@azure/ms-rest-js": "^2.6.6",
     "@azure/storage-blob": "^12.14.0",
     "@xmldom/xmldom": "0.8.7",
     "abort-controller": "3.0.0",
@@ -127,8 +130,7 @@
     "lodash": "4.17.21",
     "minimist": "1.2.6",
     "mkdirp": "1.0.4",
-    "ms-rest": "2.5.6",
-    "node-fetch": "2.6.7",
+    "node-fetch": "^2.6.7",
     "omelette": "0.4.17",
     "opener": "1.5.2",
     "p-limit": "3.1.0",
@@ -136,7 +138,6 @@
     "properties": "1.2.1",
     "pumpify": "2.0.1",
     "qs": "6.11.0",
-    "request": "2.88.2",
     "rimraf": "3.0.2",
     "rxjs": "6.6.7",
     "semver": "7.3.5",
