--- a/appcenter-file-upload-client-node/package.json
+++ b/appcenter-file-upload-client-node/package.json
@@ -35,7 +35,7 @@
     "prettier": "2.4.1",
     "ts-node": "9.1.1",
     "typemoq": "2.1.0",
-    "typescript": "4.1.6",
+    "typescript": "^5.1.6",
     "uuid": "7.0.3"
   },
   "dependencies": {
