--- a/appcenter-cli-1ES.yml
+++ b/appcenter-cli-1ES.yml
@@ -25,7 +25,8 @@ extends:
     - ES365AIMigrationTooling-BulkMigrated
     sdl:
       sourceAnalysisPool: 1ES-PT-Windows-2022
-
+      componentgovernance:
+        ignoreDirectories: test
     stages:
     - stage: Stage
       jobs:
